# rayex

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  License.txt  README.md  README.md  cpp.hint  imgui.ini  todo.txt
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-12-10_17-43-10/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-12-10_17-43-17/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-12-10_17-43-29/: details.md  results.csv  results.md  results.txt
assets/models/: CornellBox.mtl  bunny.mtl  cornell_box.mtl  cube.mtl  scene.mtl  sphere.mtl  venus.mtl  vulkan.mtl
assets/shaders/: Geometry.glsl  Instance.glsl  Lights.glsl  PathTrace.rahit  PathTrace.rchit  PathTrace.rgen  PathTrace.rmiss  PostProcessing.frag  PushConstants.glsl  Random.glsl  Ray.glsl  instance.glsl  lights.glsl  material.glsl  random.glsl  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  simple3D.frag  simple3D.vert  wavefront.glsl
docs/: CNAME  DoxyFileLinux  DoxyFileWSL  DoxyFileWindow  Doxyfile  DoxyfileWin  generateDocs.sh  generateDocsWSL.sh
docs/clang tidy/: .clang-format
docs/html/: __features_8hpp.html  __features_8hpp_source.html  __fixes_8hpp.html  __fixes_8hpp_source.html  __noise_8hpp.html  __noise_8hpp.js  __noise_8hpp_source.html  __swizzle_8hpp.html  __swizzle_8hpp.js  __swizzle_8hpp_source.html  __swizzle__func_8hpp.html  __swizzle__func_8hpp_source.html  __vectorize_8hpp.html  __vectorize_8hpp_source.html  _acceleration_structure_8hpp.html  _acceleration_structure_8hpp.js  _acceleration_structure_8hpp__dep__incl.map  _acceleration_structure_8hpp__dep__incl.md5  _acceleration_structure_8hpp__incl.map  _acceleration_structure_8hpp__incl.md5  _acceleration_structure_8hpp_source.html  _api_8cpp.html  _api_8cpp.js  _api_8hpp.html  _api_8hpp__dep__incl.map  _api_8hpp__dep__incl.md5  _api_8hpp__incl.map  _api_8hpp__incl.md5  _api_8hpp_source.html  _base_8hpp.html  _base_8hpp.js  _base_8hpp_source.html  _bindings_8hpp.html  _bindings_8hpp_source.html  _buffer_8cpp.html  _buffer_8hpp.html  _buffer_8hpp.js  _buffer_8hpp_source.html  _c_make_lists_8txt.html  _camera_8hpp.html  (+3338 more)
docs/moxygen/: api-API.md  api-BASE.md  api-Base.md  api-s.md API  api-s.md BASE
docs/xml/: _acceleration_structure_8hpp.xml  _api_8cpp.xml  _api_8hpp.xml  _base_8hpp.xml  _bindings_8hpp.xml  _buffer_8cpp.xml  _buffer_8hpp.xml  _camera_8hpp.xml  _camera_base_8cpp.xml  _camera_base_8hpp.xml  _command_buffer_8cpp.xml  _command_buffer_8hpp.xml  _components_8cpp.xml  _components_8hpp.xml  _core_8hpp.xml  _cubemap_8hpp.xml  _debug_messenger_8cpp.xml  _debug_messenger_8hpp.xml  _descriptor_set_8cpp.xml  _descriptor_set_8hpp.xml  _descriptor_set_layout_8cpp.xml  _descriptor_set_layout_8hpp.xml  _destructors_8cpp.xml  _destructors_8hpp.xml  _device_8cpp.xml  _device_8hpp.xml  _geometry_8hpp.xml  _gui_8hpp.xml  _gui_base_8cpp.xml  _gui_base_8hpp.xml  _helpers_8cpp.xml  _helpers_8hpp.xml  _image_8cpp.xml  _image_8hpp.xml  _index_buffer_8hpp.xml  _initializers_8cpp.xml  _initializers_8hpp.xml  _instance_8cpp.xml  _instance_8hpp.xml  _lights_8hpp.xml  (+222 more)
example/: CMakeLists.txt  CustomCamera.hpp  CustomGui.hpp  CustomWindow.hpp  Example.hpp  Keys.hpp  Scenes.hpp  main.cpp
include/: CMakeLists.txt  Core.hpp  Export.hpp  RayExec.hpp  Rayex.hpp  Renderer.hpp  Settings.hpp
include/api/: Api.hpp  Bindings.hpp  Components.hpp  Descriptor.hpp  Instance.hpp  Material.hpp  Model.hpp  Pipeline.hpp  PostProcessingRenderer.hpp  Queues.hpp  RenderPass.hpp  Scene.hpp  Surface.hpp  Swapchain.hpp  Sync.hpp  Vertex.hpp  VulkanApi.hpp
include/api/buffers/: Buffer.hpp  CommandBuffer.hpp  IndexBuffer.hpp  StorageBuffer.hpp  UniformBuffer.hpp  VertexBuffer.hpp
include/api/descriptors/: Descriptor.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp
include/api/devices/: Device.hpp  PhysicalDevice.hpp
include/api/gui/: GuiBase.hpp
include/api/image/: Cubemap.hpp  Image.hpp  Skybox.hpp  Texture.hpp
include/api/misc/: Components.hpp  Vertex.hpp
include/api/pathtrace/: AccelerationStructure.hpp  Cubemap.hpp  PathTraceBuilder.hpp  PathTracer.hpp
include/api/raytracing/: AccelerationStructure.hpp  RayTracingBuilder.hpp
include/api/utility/: DebugMessenger.hpp  Destructors.hpp  Helpers.hpp  Initializers.hpp  Util.hpp
include/base/: Base.hpp  Camera.hpp  CameraBase.hpp  Geometry.hpp  GeometryNode.hpp  GeometryNodeBase.hpp  Gui.hpp  Interfaces.hpp  LightNode.hpp  Lights.hpp  Material.hpp  Mesh.hpp  Model.hpp  Node.hpp  NodeBase.hpp  Scene.hpp  Settings.hpp  Time.hpp  Window.hpp
include/modules/: Modules.hpp
include/pch/: stdafx.hpp
include/window/: Time.hpp  Timer.hpp  Window.hpp  WindowBase.hpp  WindowProperties.hpp
licenses/: SDL2.txt
resources/shaders/: basic.vert  closesthit_rchit.spv  lights.glsl  miss_rmiss.spv  raygen_rgen.spv  raytrace.rchit  raytrace.rgen  raytrace.rmiss  simple3D.frag  simple3D.vert  simple3D_frag.spv  simple3D_vert.spv  test.frag  test.vert  test_frag.spv  test_vert.spv
source/: CMakeLists.txt  RayExec.cpp  Rayex.cpp  Renderer.cpp  Settings.cpp
source/api/: Api.cpp  Bindings.cpp  Components.cpp  Descriptor.cpp  Instance.cpp  Model.cpp  Pipeline.cpp  PostProcessingRenderer.cpp  Queues.cpp  RenderPass.cpp  Surface.cpp  Swapchain.cpp  Sync.cpp
source/base/: Base.cpp  Camera.cpp  CameraBase.cpp  Geometry.cpp  GeometryNode.cpp  Gui.cpp  GuiBase.cpp  Interfaces.cpp  LightNode.cpp  LightNodeBase.cpp  Lights.cpp  Material.cpp  Mesh.cpp  Model.cpp  Node.cpp  Scene.cpp  Settings.cpp  Time.cpp  Window.cpp
source/window/: Time.cpp  WindowBase.cpp
src/: Base.hpp  Camera.cpp  Camera.hpp  Core.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Settings.cpp  Settings.hpp  VkApi.cpp  VkApi.hpp  VkMessenger.cpp  test.cpp
src/api/: Api.cpp  Api.hpp  BaseComponent.cpp  BaseComponent.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandBuffers.cpp  CommandBuffers.hpp  CommandPool.cpp  CommandPool.hpp  Components.cpp  Components.hpp  DebugMessenger.cpp  DebugMessenger.hpp  Device.cpp  (+41 more)
(+397 files in other folders)
